# corefolio

./: README.md  pyproject.toml  requirements.txt
corefolio/: constraint.py  constraints.py  optimizer.py  universe.py
quantfolio/: __init__.py  constraints.py  optimizer.py  universe.py
tests/: test_constraints.py  test_optimizer.py  test_universe.py
