[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantfolio"
version = "0.1.0"
description = "A package for optimizing asset selection using Pyomo and CVXPY."
authors = [
    { name = "Sebastien Eveno", email = "sebastien.louis.eveno@gmail.com" }
]
license = "MIT"
readme = "README.md"
dependencies = [
    "pandas",
    "pyomo >= 6.9.1",
    "cvxpy >= 1.6.2",
    "pytest"
]

[tool.setuptools]
packages = ["quantfolio"]

[tool.pytest.ini_options]
testpaths = ["tests"]