[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantfolio"
version = "0.1.0"
description = "A package for optimizing asset selection using CVXPY."
authors = [
    { name = "Sebastien Eveno", email = "sebastien.louis.eveno@gmail.com" }
]
license = "MIT"
readme = "README.md"
dependencies = [
    "pandas",
    "cvxpy >= 1.6.2",
    "pytest"
]

[tool.setuptools]
packages = ["quantfolio"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.flake8]
max-line-length = 88