[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantfolio"
version = "0.1.0"
description = "A package for optimizing asset selection using CVXPY."
authors = [
    { name = "Sebastien Eveno", email = "sebastien.louis.eveno@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"

[project.dependencies]
pandas = ">=1.5.1"
cvxpy = ">= 1.6.2"
pytest = ">=7.1.3"

[tool.setuptools]
packages = ["quantfolio"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.flake8]
max-line-length = 100
